package site.ftka;

public abstract class Figura2D {

    public abstract double getPerimetro();
    public abstract double getArea();

}